Added a keybind to save image

--- a/help.html
+++ b/help.html
@@ -98,6 +98,7 @@
 				<li>Brush Size & Eraser Size (Increase) | ] or +</li>
 				<li>Brush Size & Eraser Size (Decrease) | [ or -</li>
 				<li>Clear Canvas | Delete</li>
+				<li>Save Canvas | S</li>
 			</ul>
 		</section>
 
