--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
 			<input type="radio" id="eraser" name="toolSelector" value="eraser">
 			<label for="eraser">Eraser</label>
 		</div>
-		<!-- <div class="toolbar-tools">
+		<div class="toolbar-tools">
 			<input type="radio" id="paintBucket" name="toolSelector" value="paintBucket">
 			<label for="paintBucket">Paint Bucket</label>
 		</div>
 		<div class="toolbar-tools">
-			<input type="radio" id="rectangle" name="toolSelector" value="rectangle">
+			<input type="radio" id="rectangle" name="toolSelector" value="rectangle" onclick="draw_shape()">
 			<label for="rectangle">Rectangle</label>
 		</div>
 		<div class="toolbar-tools">
-			<input type="radio" id="circle" name="toolSelector" value="circle">
+			<input type="radio" id="circle" name="toolSelector" value="circle" onclick="draw_shape()">
 			<label for="circle">Circle</label>
 		</div>
 		<div class="toolbar-tools">
-			<input type="radio" id="line" name="toolSelector" value="line">
+			<input type="radio" id="line" name="toolSelector" value="line" onclick="draw_shape()">
 			<label for="line">Line</label>
 		</div>
 		<div class="toolbar-tools">
 			<input type="radio" id="text" name="toolSelector" value="text">
 			<label for="text">Text</label>
-		</div> -->
+		</div>
 
 		<br>
 
