--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <style>
 
+	/* Centers the page elements. */
 	body {
 		height: 100vh;
 		display: flex;
@@ -20,7 +21,6 @@
 		align-items: center;
 		background-color: #303030;
 		gap: 10px;
-		overflow: hidden;
 	}
 
 	#toolsContainer {
@@ -31,14 +31,14 @@
 		font-size: 1.5em;
 	}
 
-	#canvas {
-		background-color: white;
-		margin: 1em 0;
-	}
-
 	.button-class {
 		font-size: 0.8em;
 	}
+
+	/* Makes the Undo & Redo buttons sit on a single line. */
+	.history-button {width: 48.5%;}
+	#undoButton {float: left;}
+	#redoButton {float: right;}
 
 	#guide {
 		padding: 10px;
@@ -46,20 +46,9 @@
 		width: 780px;
 	}
 
-	.history-button {
-		width: 48.5%;
-	}
-
-	#undoButton {
-		float: left;
-	}
-
-	#redoButton {
-		float: right;
-	}
-
-	#notToolbar {
-		width: min-content;
+	#canvas {
+		background-color: white;
+		margin: 1em 0;
 	}
 
 	#logoContainer {
@@ -78,30 +67,37 @@
 	<div id="toolsContainer">
 
 		<h2>Select Tool</h2>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="brush" name="toolSelector" value="brush" checked>
 			<label for="brush">Brush</label>
 		</div>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="pencil" name="toolSelector" value="pencil">
 			<label for="pencil">Pencil</label>
 		</div>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="eraser" name="toolSelector" value="eraser">
 			<label for="eraser">Eraser</label>
 		</div>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="paintBucket" name="toolSelector" value="paintBucket">
 			<label for="paintBucket">Paint Bucket</label>
 		</div>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="rectangle" name="toolSelector" value="rectangle">
 			<label for="rectangle">Rectangle</label>
 		</div>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="circle" name="toolSelector" value="circle">
 			<label for="circle">Circle</label>
 		</div>
+
 		<div class="toolbar-tools">
 			<input type="radio" id="line" name="toolSelector" value="line">
 			<label for="line">Line</label>
@@ -122,24 +118,31 @@
 		<div id="colorPickerContainer">
 			<label>Color: </label>
 			<input type="color" id="colorPicker">
-		</div>
+		</div>	
 
 		<br>
 
-    <button id="clearCanvasButton" class="button-class" onclick="clear_canvas()">Clear Canvas</button>
-    <button id="saveImageButton" class="button-class" onclick="save_image()">Save Painting</button>
-		<button id="helpButton" class="button-class" onclick="location.href='help.html'">Help (?)</button>
-		<span id="undoButtons">
+    <button id="clearCanvasbutton" class="button-class" onclick="clear_canvas()">Clear Canvas</button>
+
+    <button id="saveImagebutton" class="button-class" onclick="save_image()">Save Painting</button>
+
+		<button id="helpbutton" class="button-class" onclick="location.href='help.html'">Help (?)</button>
+
+		<span>
 			<button id="undoButton" class="button-class history-button" onclick="undo()">Undo</button>
 			<button id="redoButton" class="button-class history-button" onclick="redo()">Redo</button>
 		</span>
 
 	</div>
 
-	<div id="notToolbar">
-		<div id="guide">Hi</div>
+	<div>
+
+		<div id="guide"></div>
+
 		<canvas id="canvas" height="550" width="800"></canvas>
+
 		<div id="logoContainer"><img src="logo_full.png" id="logo_full"></div>
+
 	</div>
 
 	<script src="script.js"></script>
