--- a/help.html
+++ b/help.html
@@ -87,6 +87,10 @@
 		padding: 0;
 	}
 
+	li {
+		margin-bottom: 1.5ch;
+	}
+
 </style>
 
 <body>
@@ -97,6 +101,10 @@
 		<a href="#brush">Brush</a>
 		<a href="#pencil">Pencil</a>
 		<a href="#eraser">Eraser</a>
+		<a href="#paintBucket">Paint Bucket</a>
+		<a href="#rectangle">Rectangle</a>
+		<a href="#circle">Circle</a>
+		<a href="#line">Line</a>
 		<a href="#sizes">Brush Size & Eraser Size</a>
 		<a href="#keyboard">Keyboard Functionality</a>
 		<a href="index.html" id="backToBeint">Back to Beint</a>
@@ -109,12 +117,10 @@
 			<p>Michaelsoft Beint is a drawing program that utilizes the HTML canvas element.</p>
 			<p>Some key features of Michaelsoft Beint include:</p>
 			<ul>
-				<li>A dedicated toolbar with 3 tools</li>
+				<li>A dedicated toolbar with 7 tools</li>
 				<li>Separate sizes for the Brush & Eraser</li>
 				<li>Painting with any color you wish</li>
-				<li>Being able to easily clear the canvas</li>
-				<li>Saving your work to your desktop</li>
-				<li>Keyboard functionality with the toolbar</li>
+				<li>Keyboard Shortcuts</li>
 			</ul>
 		</section>
 
@@ -147,6 +153,42 @@
 
 		<hr>
 
+		<section id="paintBucket">
+			<h1>Paint Bucket</h1>
+			<p>Keyboard Shortcut: F</p>
+			<p></p>
+			<p></p>
+		</section>
+
+		<hr>
+
+		<section id="rectangle">
+			<h1>Rectangle</h1>
+			<p>Keyboard Shortcut: R</p>
+			<p>The Rectangle Tool draws a rectangle.</p>
+			<p></p>
+		</section>
+
+		<hr>
+
+		<section id="circle">
+			<h1>Circle</h1>
+			<p>Keyboard Shortcut: C</p>
+			<p>The Circle Tool draws a circle.</p>
+			<p></p>
+		</section>
+
+		<hr>
+
+		<section id="line">
+			<h1>Line</h1>
+			<p>Keyboard Shortcut: L</p>
+			<p>The Line Tool draws a line.</p>
+			<p></p>
+		</section>
+
+		<hr>
+
 		<section id="sizes">
 			<h1>Brush Size & Eraser Size</h1>
 			<p>Keyboard Shortcut (Increase Size): ] or +</p>
@@ -158,16 +200,22 @@
 		<section id="keyboard">
 			<h1>Keyboard Functionality</h1>
 			<p>Every tool in Michaelsoft Beint is paired with a specific keyboard key.</p>
-			<p style="margin-bottom: 3.75ch;">These pairings allow for quick access to the available tools, making your work faster.</p>
+			<p style="margin-bottom: 3ch;">These pairings allow for quick access to the available tools, making your work faster.</p>
 			<p>The tool-key pairings have been listed for your convenience:</p>
 			<ul>
 				<li>Brush | B</li>
 				<li>Pencil | P</li>
 				<li>Eraser | E</li>
-				<li>Brush Size & Eraser Size (Increase) | ] or +</li>
-				<li>Brush Size & Eraser Size (Decrease) | [ or -</li>
+				<li>Paint Bucket | F</li>
+				<li>Rectangle | R</li>
+				<li>Circle | C</li>
+				<li>Line | L</li>
+				<li>Brush Size & Eraser Size (Increase) | ']' or '+'</li>
+				<li>Brush Size & Eraser Size (Decrease) | '[' or '-'</li>
 				<li>Clear Canvas | Delete</li>
-				<li>Save Canvas | S</li>
+				<li>Save Canvas | Ctrl + S</li>
+				<li>Undo | Ctrl + Z</li>
+				<li>Redo | Ctrl + Y</li>
 			</ul>
 		</section>
 
