--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@
 	#undoButton {float: left;}
 	#redoButton {float: right;}
 
-	#guide {
-		padding: 10px;
-		background-color: aliceblue;
-		width: 780px;
-	}
-
-	#canvas {
+	canvas {
 		background-color: white;
 		margin: 1em 0;
 	}
@@ -57,7 +51,7 @@
 	}
 
 	#logoContainer > img {
-		height: 10em
+		height: 10em;
 	}
 
 </style>
@@ -136,8 +130,6 @@
 	</div>
 
 	<div>
-
-		<div id="guide"></div>
 
 		<canvas id="canvas" height="550" width="800"></canvas>
 
