Improved the brush with Sean's help

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Michaelsoft Beint</title>
+  <title>ermmm what the sigma</title>
 	<link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 
