Added undo & redo functionality; Also added a few more comments

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ermmm what the sigma</title>
-	<link rel="shortcut icon" href="logo.png" type="image/x-icon">
+  <title>Michaelsoft Beint</title>
+	<link rel="shortcut icon" href="logo_mini.png" type="image/x-icon">
 </head>
 
 <style>
@@ -46,7 +46,7 @@
 	}
 
 	#logoContainer {
-		width: 800px;
+		width: 800px; /* 800px is the width of the canvas. We are making the logo container's width match with the width of the canvas. */
 		background-color: rgb(223, 223, 223);
 	}
 
@@ -77,10 +77,10 @@
 			<label for="eraser">Eraser</label>
 		</div>
 
-		<div class="toolbar-tools">
+		<!-- <div class="toolbar-tools">
 			<input type="radio" id="paintBucket" name="toolSelector" value="paintBucket">
 			<label for="paintBucket">Paint Bucket</label>
-		</div>
+		</div> -->
 
 		<div class="toolbar-tools">
 			<input type="radio" id="rectangle" name="toolSelector" value="rectangle">
