--- a/index.html
+++ b/index.html
@@ -77,11 +77,6 @@
 			<label for="eraser">Eraser</label>
 		</div>
 
-		<!-- <div class="toolbar-tools">
-			<input type="radio" id="paintBucket" name="toolSelector" value="paintBucket">
-			<label for="paintBucket">Paint Bucket</label>
-		</div> -->
-
 		<div class="toolbar-tools">
 			<input type="radio" id="rectangle" name="toolSelector" value="rectangle">
 			<label for="rectangle">Rectangle</label>
@@ -90,6 +85,11 @@
 		<div class="toolbar-tools">
 			<input type="radio" id="circle" name="toolSelector" value="circle">
 			<label for="circle">Circle</label>
+		</div>
+
+		<div class="toolbar-tools">
+			<input type="radio" id="ellipse" name="toolSelector" value="ellipse">
+			<label for="ellipse">Ellipse</label>
 		</div>
 
 		<div class="toolbar-tools">
