Update help.html (Mobile Commit)

--- a/help.html
+++ b/help.html
@@ -103,6 +103,7 @@
 		<a href="#eraser">Eraser</a>
 		<a href="#rectangle">Rectangle</a>
 		<a href="#circle">Circle</a>
+		<a href="#ellipse">Ellipse</a>
 		<a href="#line">Line</a>
 		<a href="#sizes">Brush Size & Eraser Size</a>
 		<a href="#keyboard">Keyboard Functionality</a>
@@ -129,7 +130,7 @@
 			<h1>Brush</h1>
 			<p>Keyboard Shortcut: B</p>
 			<p>The Brush Tool is selected by default when you open Michaelsoft Beint.</p>
-			<p>The digital brush is like a real life paintbrush, being used to apply color onto the canvas.</p>
+			<p>The Brush Tool mimics a real life paintbrush, being used to apply color onto the canvas.</p>
 		</section>
 
 		<hr>
@@ -137,8 +138,9 @@
 		<section id="pencil">
 			<h1>Pencil</h1>
 			<p>Keyboard Shortcut: P</p>
+			<p>The Pencil Tool mimics a real life pencil.</p>
 			<p>The Pencil Tool is like a mini version of the brush.</p>
-			<p>The Pencil Tool does not have a adjustable size, its thickness is always set to 1.</p>
+			<p>The Pencil Tool does not have an adjustable size, its brush size is always set to 1.</p>
 		</section>
 
 		<hr>
@@ -146,7 +148,7 @@
 		<section id="eraser">
 			<h1>Eraser</h1>
 			<p>Keyboard Shortcut: E</p>
-			<p>The Eraser Tool is like a real life eraser, erasing whatever is on the canvas.</p>
+			<p>The Eraser Tool mimics a real life eraser, erasing whatever is on the canvas.</p>
 			<p>The Eraser Tool works by using the same functionality as the brush except for the fact that it is always white, the canvas' color.</p>
 		</section>
 
@@ -155,7 +157,7 @@
 		<section id="rectangle">
 			<h1>Rectangle</h1>
 			<p>Keyboard Shortcut: R</p>
-			<p>The Rectangle Tool draws a rectangle.</p>
+			<p>The Rectangle Tool draws a rectangle onto the canvas.</p>
 			<p></p>
 		</section>
 
@@ -164,8 +166,15 @@
 		<section id="circle">
 			<h1>Circle</h1>
 			<p>Keyboard Shortcut: C</p>
-			<p>The Circle Tool draws a circle.</p>
-			<p></p>
+			<p>The Circle Tool draws a circle onto the canvas.</p>
+		</section>
+
+		<hr>
+
+		<section id="ellipse">
+			<h1>Ellipse</h1>
+			<p>Keyboard Shortcut: C</p>
+			<p>The Ellipse Tool draws an ellipse onto the canvas.</p>
 		</section>
 
 		<hr>
@@ -173,8 +182,7 @@
 		<section id="line">
 			<h1>Line</h1>
 			<p>Keyboard Shortcut: L</p>
-			<p>The Line Tool draws a line.</p>
-			<p></p>
+			<p>The Line Tool draws a straight line onto the canvas.</p>
 		</section>
 
 		<hr>
