Update help.html (mobile dos)

--- a/help.html
+++ b/help.html
@@ -191,6 +191,8 @@
 			<h1>Brush Size & Eraser Size</h1>
 			<p>Keyboard Shortcut (Increase Size): ] or +</p>
 			<p>Keyboard Shortcut (Decrease Size): [ or -</p>
+			<p>The Brush Size does not affect only the brush. It also affects the thickness of other tools, such as: rectangles, circles, ellipses, and lines.</p>
+			<p>The Eraser Size only affects the eraser.</p>
 		</section>
 
 		<hr>
@@ -206,6 +208,7 @@
 				<li>Eraser | E</li>
 				<li>Rectangle | R</li>
 				<li>Circle | C</li>
+				<li>Ellipse | S</li>
 				<li>Line | L</li>
 				<li>Brush Size & Eraser Size (Increase) | ']' or '+'</li>
 				<li>Brush Size & Eraser Size (Decrease) | '[' or '-'</li>
