--- a/help.html
+++ b/help.html
@@ -221,7 +221,7 @@
 
 		<hr>
 
-		<p style="margin-bottom: 5px;"><img src="logo_full.png" id="logo-small"><a href="#top" id="topButton">Go to Top</a></p>
+		<p style="margin-bottom: 5px;"><a href="index.html"><img src="logo_full.png" id="logo-small"></a><a href="#top" id="topButton">Go to Top</a></p>
 
 	</main>
 	
